# maaserbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
maaserbot/: bot.py
maaserbot/handlers/: __init__.py  admin_handlers.py  common_handlers.py  user_handlers.py
maaserbot/models/: __init__.py  base.py  models.py
maaserbot/utils/: db.py  errors.py  logging_utils.py
migrations/: alter_telegram_id.sql  fix_enums.sql
tests/: __init__.py  test_db_utils.py  test_models.py
