[tool.poetry]
name = "maaserbot"
version = "0.1.0"
description = "Telegram bot for managing maaser calculations"
authors = ["Haim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["webhooks"], version = "^21.0"}
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
httpx = "^0.28.1"
aiohttp = "^3.9.1"
psycopg = "^3.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
